Frontends de proyectos
Interfaces graficas

--- a/.gitignore
+++ b/.gitignore
@@ -1068,3 +1068,4 @@ Inteligencia Artificial/workspace/.metadata/.plugins/org.springframework.ide.ecl
 Inteligencia Artificial/workspace/.metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.blogs/-549550714.xml
 Inteligencia Artificial/workspace/.metadata/.plugins/org.springsource.ide.eclipse.dashboard.ui/feeds/dashboard.feeds.update/623127801.xml
 Inteligencia Artificial/workspace/.metadata/version.ini
+frontendTesis/package-lock.json
